<resources>
    <string name="app_name">TP N°2 - GRUPO 4</string>
    <string name="title_header_main">Home</string>
    <string name="title_header_1">Ventana 1</string>
    <string name="title_header_2">Ventana 2</string>

    <!-- STRINGS NOMBRES Y APELLIDOS-->
    <string name="nombre1">Clifton Manuel</string>
    <string name="nombre2">Fernandez Leonardo</string>
    <string name="nombre3">Gimenez Pablo</string>
    <string name="nombre4">Sinnott Segura Gonzalo</string>
    <string name="nombre5">Varela Hernan</string>

    <!-- STRINGS MENU DE NAVEGACION -->
    <string name="menu_title_agregar">Agregar contacto</string>
    <string name="menu_title_listar">Listado de contactos</string>

    <!-- STRINGS FORMULARIO DE CONTACTO -->
    <string name="form_contacto">Formulario de contacto</string>
    <string name="form_desc">Este es un formulario destinado al registro de personas, sus datos personales e intereses.</string>
    <string name="form_nombre">Nombre</string>
    <string name="form_apellido">Apellido</string>
    <string name="form_telefono">Teléfono</string>
    <string name="form_email">Email</string>
    <string name="form_direccion">Dirección</string>
    <string name="form_nacimiento">Fecha de nacimiento</string>
    <string name="form_spinner_casa">Casa</string>
    <string name="form_spinner_trabajo">Trabajo</string>
    <string name="form_spinner_movil">Móvil</string>
    <string name="form_continuar">Continuar</string>

</resources>