<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvNombre1"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="96dp"
        android:text="@string/nombre1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvNombre4"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:text="@string/nombre4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txvNombre5"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre5" />

    <TextView
        android:id="@+id/txvNombre3"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/nombre3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txvNombre4"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre4" />

    <TextView
        android:id="@+id/txvNombre2"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:text="@string/nombre2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txvNombre3"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre3" />

    <TextView
        android:id="@+id/txvNombre5"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:text="@string/nombre5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txvNombre1"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre1" />

</androidx.constraintlayout.widget.ConstraintLayout>



